cmake_minimum_required(VERSION 3.20.0)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(ctui LANGUAGES C)
set(CMAKE_C_FLAGS_RELEASE "-O3")
set(CMAKE_BUILD_TYPE Debug)
set(C_STANDARD 23)

add_executable(${PROJECT_NAME} src/main.c)
add_subdirectory(cmdio)
target_link_libraries(${PROJECT_NAME} PUBLIC cmdio)
target_include_directories(${PROJECT_NAME} PUBLIC include cmdio)
